--- a/day4-2/stylefb.css
+++ b/day4-2/stylefb.css
@@ -314,16 +314,36 @@ footer a:hover {
   display: flex;
   flex-flow: column wrap;
   align-items:center ;
-  background-color: white;
-  width: 430px;
+  background-color: rgba(255, 255, 255, 0.7);
+  width: 2000px;
+  height: 900px;
+  position: absolute;
+  top: 0px;
+  left: -1000px;
+  padding: 10px;
+}
+
+#mother {
+  position: absolute;
+  top: 98px;
+  left: 1272px;
+  width: 410px;
   height: 520px;
   box-shadow: 0 2px 8px 5px #dddfe2;
-  border-radius: 7px;
+  background-color: white;
   line-height: 1.34;
-  position: absolute;
-  top: 97px;
-  right: 275px;
+  padding: 10px 10px 20px 10px;
+  border-radius: 12px;
 }
+
+.form-wrapper {
+  display: none !important;
+}
+
+#signup:checked + .form-wrapper {
+  display: block !important;
+}
+
 
 #reg-form-container {
   width: 100%;
@@ -476,6 +496,7 @@ reg-area-container::-ms-input-placeholder { /* Microsoft Edge */
   justify-content: center;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 20px;
 }
 
 #reg-sign-up-btn:hover {
@@ -498,14 +519,33 @@ reg-area-container::-ms-input-placeholder { /* Microsoft Edge */
 }
 
 #reg-notice {
-  margin-top: 15px;
+  margin: 15px 0px 15px 0px;
   display: block;
-  width: 93%;
+  width: 100%;
   font-size: 12px;
-  margin-bottom: 15px;
   color: #777 ;
   font-family: Helvetica, Arial, sans-serif;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
 }
 #reg-notice a {
   color:rgb(35, 118, 251);
 }
+
+#close {
+  display: block;
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  font-size: 40px;
+  font-weight: 600;
+}
+
+#signup:checked *:not(#reg-area-container) {
+  opacity: 0.4;
+}
+
+input[type="checkbox"] {
+  display: none !important;
+}
+
