--- a/day4-2/stylefb.css
+++ b/day4-2/stylefb.css
@@ -430,6 +430,8 @@ reg-area-container select {
 #reg-title-container {
   margin-top: 10px;
   padding-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
   border-bottom: 1px solid rgb(195, 195, 195);
   width: 93%;
   display: flex;
@@ -519,7 +521,7 @@ reg-area-container::-ms-input-placeholder { /* Microsoft Edge */
 }
 
 #reg-notice {
-  margin: 15px 0px 15px 0px;
+  margin: 15px auto 15px auto;
   display: block;
   width: 100%;
   font-size: 12px;
