--- a/day4-2/stylefb.css
+++ b/day4-2/stylefb.css
@@ -315,24 +315,24 @@ footer a:hover {
   flex-flow: column wrap;
   align-items:center ;
   background-color: rgba(255, 255, 255, 0.7);
-  width: 3000px;
-  height: 900px;
+  width: 100%;
+  height: 850px;
   position: absolute;
   top: 0px;
-  left: -1000px;
-  padding: 10px;
+  left: 0px;
+  padding-right: 10px;
 }
 
 #mother {
   position: absolute;
-  top: 98px;
-  left: 1272px;
+  top: 120px;
+  left: 285px;
   width: 410px;
-  height: 520px;
+  height: 530px;
   box-shadow: 0 2px 8px 5px #dddfe2;
   background-color: white;
   line-height: 1.34;
-  padding: 10px 10px 10px 10px;
+  padding: 10px 10px 20px 10px;
   border-radius: 12px;
 }
 
@@ -498,8 +498,7 @@ reg-area-container::-ms-input-placeholder { /* Microsoft Edge */
   justify-content: center;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
-  margin-bottom: 10px;
-  margin-top: 3px;
+  margin-bottom: 20px;
 }
 
 #reg-sign-up-btn:hover {
@@ -522,10 +521,10 @@ reg-area-container::-ms-input-placeholder { /* Microsoft Edge */
 }
 
 #reg-notice {
-  margin: 15px 5px 15px 5px;
+  margin: 15px auto 15px auto;
   display: block;
   width: 100%;
-  font-size: 11px;
+  font-size: 12px;
   color: #777 ;
   font-family: Helvetica, Arial, sans-serif;
   margin-block-start: 1em;
