--- a/day6/style.css
+++ b/day6/style.css
@@ -23,12 +23,87 @@ table {
   border-spacing: 0;
 }
 
+ul {
+  padding-inline-start: 0px;
+}
 /* ---------- kết thúc reset css ----------*/
+
+/* ---------- tổng quan ----------*/
+.page-wrapper {
+  width: 1080px;
+  margin: 0px auto 0px auto;
+  background-color: rgb(229, 229, 229);
+  
+}
+
+/* ---------- header: logo + searchbar ----------*/
+
+header {
+  
+  width: 1080px;
+  height: 72px;
+}
 
 .logo-container {
   width: 225px;
+  float: left;
+  height: 72px;
 }
 
 .logo-container img {
   padding: 10px 35px 10px 25px;
+  background-color: rgb(245, 245, 245);
 }
+
+.header-bar {
+  width: 855px;
+  float: right;
+  padding: 13px 0px 13px 0px;
+  background-color: rgb(245, 245, 245);
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.1);
+
+}
+
+.search-area {
+  width: 575px;
+  float: left;
+}
+
+.account {
+  width: 200px;
+  float: right;
+}
+
+input[type="text"] {
+  width: 505px;
+  border: 1px;
+  padding: 12px 15px 12px 15px;
+  float: left;
+}
+
+input[type="image"] {
+  width: 50px;
+  float: left;
+  padding: 12px 18px 12px 18px;
+  background-color: #7c9adb;
+}
+
+.account-link {
+  display: block;
+  height: 40px;
+  width: 140px;
+}
+
+.account img {
+  width: 40px;
+  float: left;
+  height: 40px;
+}
+
+.account p {
+  display: block;
+  float: right;
+  padding: 12px 0px 10px 0px;
+  font-size: 17px;
+}
+
