--- a/day8/style.css
+++ b/day8/style.css
@@ -38,7 +38,6 @@ header {
 }
 
 .header-container {
-  background-color: pink;
   display: flex;
   justify-content: space-between;
 }
@@ -57,6 +56,13 @@ header {
 .header-container a {
   color: black;
   font-weight: 400;
+  transition: color 0.4s;
+}
+
+.header-container a:hover {
+  color: #ff817e;
+  font-weight: 400;
+  text-decoration: none;
 }
 
 /* banner */
@@ -71,7 +77,6 @@ header {
 .banner-content {
   width: 1140px;
   margin: 120px auto 0px auto;
-  background-color: rgb(1, 190, 190);
 }
 
 .banner-text {
@@ -154,7 +159,6 @@ header {
 .about {
   width: 1140px;
   margin: 180px auto 0px auto;
-  background-color: rgb(1, 190, 190);
   position: relative;
 }
 
@@ -226,7 +230,6 @@ header {
 
 .gallery {
   margin-top: 100px;
-  background-color: #888;
   display: flex;
   justify-content: space-between;
   margin-bottom: 100px;
@@ -332,9 +335,8 @@ header {
 }
 
 .popular-items a:first-of-type {
-  color: #263a41;
-  font-size: 22px;
-  font-family: 'Rufina', serif;
+  color: #fff;
+  font-size: 16px;
   font-weight: 700;
   margin: 16px 0px 20px 0px;
 }
@@ -352,7 +354,7 @@ header {
   text-decoration: none;
 }
 
-.popular-items a:last-of-type {
+.readmore {
   color: #fff;
   display: inline-block;
   font-size: 16px;
@@ -367,12 +369,381 @@ header {
   transition: background-color 0.3s;
 }
 
-.popular-items a:last-of-type:hover {
+.readmore:hover {
   background-color: #ff817e;
+  color: #fff;
 }
 
 .quotes {
   background-color: #fff9f8;
+  position: relative;
+  overflow: hidden;
+}
+
+.quotes-container {
+  position: relative;
+  overflow: hidden;
+  width: 1140px;
+}
+
+.quote-img {
+  display: block;
+  width: 59px;
+  margin: 0px auto 50px auto;
+  padding-top: 40px;
+}
+
+.quotes div {
+  margin: 0px auto 0px auto;
+}
+
+.quotes p {
+  text-align: center;
+  color: #263a41;
+  font-family: "Rufina", serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 35px;
+  margin-bottom: 43px;
+}
+
+.quotes-portrait {
+  display: block;
+  border-radius: 50px;
+  margin: 0px auto 0px auto;
+}
+
+.quotes input {
+  display: none;
+}
+
+.quotes label {
+  display: block;
+  width: 25px;
+  height: 60px;
+  margin: 0px auto 0px auto;
+  text-align: center;
+  font-size: 30px;
+  cursor: pointer;
+  margin-bottom: 15px;
+}
+
+.quotes-one {
+  display: block;
+  z-index: 1;
+  background-color: #fff9f8;
+}
+
+.quotes-two {
+  position: absolute;
+  display: block;
+  top: 0px;
+  right: -250%;
+  z-index: 2;
+  transition: right 1.4s;
+  background-color: #fff9f8;
+}
+
+.quotes input:checked + div {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  transition: right 0.7s;
+}
+
+.team {
+  width: 1140px;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  margin: 80px auto 80px auto;
+}
+
+.team-header {
+  width: 60%;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  text-align: center;
+}
+
+.team-header h1 {
+  color: #1e2528;
+  font-size: 42px;
+  margin-bottom: 32px;
+  font-family: 'Rufina', serif;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.team-header p {
+  color: #888;
+  margin-bottom: 50px;
+}
+
+.team-list {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+
+.team-items {
+  width: 31.5%;
+  position: relative;
+}
+
+.team img {
+  width: 100%;
+}
+
+.team-info {
+  width: 85%;
+  margin: 0px auto 0px auto;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  text-align: center;
+  background-color: #fff;
+  box-shadow: 0 5px 20px #f0f0f0;
+  position: relative;
+  top: -50px;
+
+}
+
+.team-info h2 {
+  margin: 25px 0px 5px 0px;
+  color: #263a41;
+  font-size: 22px;
+  font-family: 'Rufina', serif;
+  font-weight: 700;
+}
+
+.team-info p {
+  margin: 0px 0px 25px 0px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 27px;
+  color: #6c6c6f;
+}
+
+.appointment {
+  display: flex;
+  flex-flow: row nowrap;
+  background-color: #fff9f8;
+  margin-bottom: 100px;
+}
+
+.appointment img {
+  width: 40%;
+  margin-right: 100px;
+}
+
+.appointment-form {
+  max-width: 60%;
+  display: flex;
+  flex-flow: row wrap;
+  margin: auto 15% auto 0px;
+  align-items: center;
+  height: 400px;
+}
+
+.appointment-form input, .appointment-form select, .appointment-form textarea {
+  width: 47%;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid rgb(231, 231, 231);
+  margin: 0px 10px 0px 0px;
+  color: #999;
+  display: block;
+  font-size: 12px;
+  font-weight: 400;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.appointment-form textarea {
+  width: 96%;
+
+}
+
+.appointment button {
+  background-color: #ff817e;
+  border-radius: 30px;
+  color: #fff;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 0.8;
+  text-transform: uppercase;
+  min-width: 170px;
+  padding: 20px 15px;
+  border: none;
+  transition: color 0.5s;
+  margin-top: 30px;
+}
+
+.appointment button:hover {
+  color: black;
+}
+
+.contact {
+  width: 1140px;
+  margin: 0px auto 50px auto;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+}
+
+.contact-header {
+  width: 800px;
+  text-align: center;
+}
+
+.contact-header h1 {
+  color: #1e2528;
+  font-size: 42px;
+  font-family: 'Rufina', serif;
+  font-weight: 700;
+}
+
+.contact-header p {
+  margin: 35px 0px 80px 0px;
+  color: #888;
+}
+
+.contact-info {
+  width: 25%;
+  margin-right: 10%;
+}
+
+.contact-row {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0px 0px 15px 0px;
+}
+
+.contact-text {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.contact-text p, .contact-text a {
+  margin: 5px 0px 5px 0px;
+  color: #888;
+  font-size: 14px;
+  font-weight: 400;
+
+}
+
+.contact-icon {
+  margin-right: 30px;
+  padding: 10px 13px 10px 13px;
+  color: white;
+  text-align: center;
+  border-radius: 50%;
+  background-color: #ff817e;
+}
+
+#that {
+  padding: 10px 17px 10px 17px;
+}
+
+.contact-form {
+  width: 65%;
+  height: 300px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.contact-form input {
+  width: 80%;
+  height: 50px;
+  padding-left: 15px;
+  font-size: 14px;
+}
+
+.contact-form input:last-of-type {
+  width: 80%;
+  height: 80px;
+}
+
+.contact-form button {
+  min-width: 25%;
+  background-color: #ff817e;
+  border-radius: 30px;
+  color: #fff;
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 0.8;
+  text-transform: uppercase;
+  padding: 20px 15px;
+  border: none;
+  transition: color 0.5s;
+  margin: 20px 0px 20px 0px
+}
+
+.contact-form button:hover {
+  color: black;
+}
+
+footer {
+  height: 390px;
+  padding: 80px 0px 60px 0px;
+  background-color: #fff9f8;
+  text-align: center;
 }
 
 
+
+footer nav ul{
+  width: 450px;
+  display: flex;
+  margin: 35px auto 35px auto;
+  padding: 0;
+  justify-content: space-between;
+}
+
+footer li a {
+  color: black;
+  transition: color 0.4s;
+  font-weight: 500;
+}
+
+footer li a:hover {
+  text-decoration: none;
+  color: #ff817e;
+}
+
+.footer-icon {
+  display: inline-block;
+  padding: 0px 10px 0px 10px;
+  border-right: 1px solid #888;
+  margin-bottom: 40px;
+}
+
+.footer-icon:last-of-type {
+  border: none;
+}
+
+footer p {
+  color: #888;
+  font-size: 13px;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+#last {
+  color: #ff817e;
+}
+
+#last:hover {
+  text-decoration: none;
+}
