--- a/day8/style.css
+++ b/day8/style.css
@@ -593,7 +593,7 @@ header {
 }
 
 .contact {
-  width: 1140px;
+  width: 950px;
   margin: 0px auto 50px auto;
   display: flex;
   flex-flow: wrap;
@@ -666,7 +666,7 @@ header {
 }
 
 .contact-form input {
-  width: 80%;
+  width: 100%;
   height: 50px;
   padding-left: 15px;
   font-size: 14px;
@@ -674,12 +674,12 @@ header {
 }
 
 .contact-form input:last-of-type {
-  width: 80%;
+  width: 100%;
   height: 80px;
 }
 
 .contact-form button {
-  min-width: 25%;
+  min-width: 170px;
   background-color: #ff817e;
   border-radius: 30px;
   color: #fff;
