--- a/reset.css
+++ b/reset.css
@@ -1,8 +1,12 @@
 /* ---------- reset css ----------*/
+:root {
+  --main-color: black;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
-  
+  padding: 0;
 }
 
 a {
@@ -18,5 +22,27 @@ table {
 	border-collapse: collapse;
   border-spacing: 0;
 }
+
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+}
+
+body {
+  font-family:
+  -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  "Roboto",
+  "Helvetica Neue", Arial, sans-serif,
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+img {
+  vertical-align: middle;
+  height: auto;
+  max-width: 100%;
+}
+
 
 /* ---------- kết thúc reset css ----------*/
