--- a/day10/style.css
+++ b/day10/style.css
@@ -1,11 +1,17 @@
 /* ---------- reset css ----------*/
+
 * {
   box-sizing: border-box !important;
-  margin: 0 !important;
-  
+  margin: 0;
+  padding: 0;
 }
 
 a {
+  text-decoration: none !important;
+  color: black !important;
+}
+
+a:hover {
   text-decoration: none !important;
   color: black !important;
 }
@@ -19,4 +25,31 @@ table {
   border-spacing: 0 !important;
 }
 
+html {
+  scroll-behavior: smooth !important;
+  font-size: 62.5%;
+}
+
+body {
+  font-family:
+  -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  "Roboto",
+  "Helvetica Neue", Arial, sans-serif,
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+img {
+  vertical-align: middle;
+  height: auto;
+  max-width: 100%;
+}
+
+
 /* ---------- kết thúc reset css ----------*/
+
+.trans-btn {
+  background-color: transparent;
+  border: 2px solid white;
+}
