--- a/ss2ep2/test.css
+++ b/ss2ep2/test.css
@@ -1,38 +1,135 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-header {
+/* .title1 {
+  margin-left: 30px;
+}
+
+.header1 {
   width: 100%;
-  height: 22.5px;
+  height: 30px;
+  background-color: pink;
 }
 
-main {
+.main1 {
   width: 100%;
   display: flex;
   flex-flow: row nowrap;
+  background-color: pink;
+  padding: 0px 30px;
 }
 
-.content {
+.content1 {
   display: flex;
   flex-flow: row wrap;
   width: calc((100%-90px)* (2/3));
-  padding: 0px 22.5px 0px 22.5px;
   height: 230px;
+  margin: -7.5px;
 }
 
-.items {
+.items1 {
   background-color: blue;
   height: 100px;
   width: calc((100% - 30px)/2);
   margin: 7.5px;
 }
 
-aside {
-  margin-top: 7.5px;
+.aside1 {
+  margin: 0px 0px 30px 30px;
   background-color: blue;
-  width: calc((100%-90px)* (1/3) - 30px);
-  height: 280px;
+  width: calc((100%-90px)* (1/3));
+  height: 300px;
 }
 
+@media only screen and (max-width: 768px) {
 
+  .main1 {
+    padding: 0px 15px 0px 15px;
+    flex-flow: column nowrap;
+  }
+
+  .content1 {
+    width: calc(100% + 15px);
+  }
+
+  .aside1 {
+    width: 100%;
+    margin: 30px 0px 0px 0px;
+  }
+
+  .title1 {
+    margin-left: 15px;
+  }
+}
+ */
+/*------ Bai 2 ------*/
+
+.bai2 {
+  background-color: rgb(250, 137, 137);
+}
+
+.header2 {
+  display: flex;
+  margin: 50px auto 0px auto;
+  width: 210px;
+}
+
+.items2 {
+  width: 60px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+}
+
+.main2, .items2 {
+  background-color: blue;
+  color: white;
+}
+
+.main2 {
+  height: 300px;
+  margin: auto;
+  width: 200px;
+}
+
+@media only screen and (min-width: 768px) {
+  .header2 {
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 7.5px;
+    position: relative;
+  }
+
+  .items2 {
+    display: inline-block;
+    width: 90px;
+    height: 30px;
+    margin: 0px;
+  }
+
+  .items2:last-of-type {
+/*     position: absolute;
+    right: 7.5px;
+    top: 7.5px; */
+  }
+
+  .main2 {
+    height: 300px;
+    margin: 0px 15px 0px 15px;
+    width: auto;
+  }
+
+  h3 {
+    padding: 0;
+    margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+  }
+
+}
