--- a/ss2ep2/test.css
+++ b/ss2ep2/test.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-/* .title1 {
+.title1 {
   margin-left: 30px;
 }
 
@@ -64,7 +64,7 @@
     margin-left: 15px;
   }
 }
- */
+
 /*------ Bai 2 ------*/
 
 .bai2 {
@@ -80,9 +80,6 @@
 .items2 {
   width: 60px;
   height: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin: 5px;
 }
 
@@ -97,11 +94,20 @@
   width: 200px;
 }
 
+h3 {
+  position: relative;
+  top: 50%; 
+  right: 50%;
+  transform: translate(50%,-50%);
+  text-align: center;
+
+}
+
 @media only screen and (min-width: 768px) {
   .header2 {
     display: block;
     width: 100%;
-    margin: 0;
+    margin: 50px 0px 0px 0px;
     padding: 7.5px;
     position: relative;
   }
@@ -124,12 +130,4 @@
     margin: 0px 15px 0px 15px;
     width: auto;
   }
-
-  h3 {
-    padding: 0;
-    margin: 0;
-    margin-block-start: 0;
-    margin-block-end: 0;
-  }
-
 }
