--- a/ss2ep2/test.css
+++ b/ss2ep2/test.css
@@ -4,6 +4,11 @@
   padding: 0;
 }
 
+html {
+  background-color: rgb(228, 228, 228);
+  padding-top: 30px;
+}
+
 .title1 {
   margin-left: 30px;
 }
@@ -11,14 +16,14 @@
 .header1 {
   width: 100%;
   height: 30px;
-  background-color: pink;
+  background-color: rgb(250, 137, 137);
 }
 
 .main1 {
   width: 100%;
   display: flex;
   flex-flow: row nowrap;
-  background-color: pink;
+  background-color: rgb(250, 137, 137);
   padding: 0px 30px;
 }
 
@@ -31,7 +36,7 @@
 }
 
 .items1 {
-  background-color: blue;
+  background-color: rgb(30, 120, 238);
   height: 100px;
   width: calc((100% - 30px)/2);
   margin: 7.5px;
@@ -39,7 +44,7 @@
 
 .aside1 {
   margin: 0px 0px 30px 30px;
-  background-color: blue;
+  background-color: rgb(30, 120, 238);
   width: calc((100%-90px)* (1/3));
   height: 300px;
 }
@@ -84,7 +89,7 @@
 }
 
 .main2, .items2 {
-  background-color: blue;
+  background-color: rgb(30, 120, 238);
   color: white;
 }
 
@@ -103,7 +108,7 @@ h3 {
 
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .header2 {
     display: block;
     width: 100%;
@@ -129,5 +134,62 @@ h3 {
     height: 300px;
     margin: 0px 15px 0px 15px;
     width: auto;
+  }
+}
+
+/*------ Bai 3 ------*/
+
+.bai3 {
+  margin: 50px auto 20px auto;
+  background-color: rgb(84, 231, 150);
+}
+
+.header3 {
+  display: flex;
+  width: 210px;
+  margin: auto;
+  height: 50px;
+  align-items: center;
+}
+
+.items3 {
+  width: 60px;
+  height: 30px;
+  margin: 5px;
+}
+
+.content3, .items3 {
+  background-color: rgb(30, 120, 238);
+  color: white;
+}
+
+.content3 {
+  height: 150px;
+  margin: 0px auto 10px auto;
+  width: 200px;
+}
+
+@media only screen and (min-width: 600px) {
+  .items3 {
+    width: 90px;
+    height: 30px;
+    margin: 0;
+  }
+  .header3 {
+    padding: 15px;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .main3 {
+    display: flex;
+    padding: 15px 15px 0px 15px;
+    background-color: rgb(250, 137, 137);
+    justify-content: space-between;
+  }
+  .content3 {
+    width: calc((100% - 15px)/2);
+    margin: 0;
+    height: 250px;
   }
 }
