--- a/ss2ep3/style.css
+++ b/ss2ep3/style.css
@@ -66,7 +66,7 @@ label {
   color: white;
 }
 
-.logo-button-container {
+.logo-button-container6 {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -74,14 +74,14 @@ label {
   background-color: orange;
 }
 
-.logo {
+.logo6 {
   width: 100px;
   height: 30px;
   background-color: pink;
   font-size: 15px;
 }
 
-.menu-container {
+.menu-container6 {
   width: 100%;
   background-color: orange;
   padding: 80px 15px 15px 15px;
@@ -107,30 +107,33 @@ li:hover {
   background-color: rgb(48, 72, 212);
 }
 
-.main6 {
+.main6, .main7 {
   padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: wrap;
 }
 
-.content {
+.content6 {
   width: 100%;
-  height: 200px;
+  height: 150px;
   background-color: rgb(48, 123, 236);
 }
 
-input:checked + div {
-  top: 0px;
+.bai6 input:checked + div {
+  top: 0;
 }
 
 @media only screen and (min-width: 768px) {
-  label, li:first-of-type {
+  label, .bai6 li:first-of-type {
     display: none !important;
   }
-  .logo-button-container {
+  .logo-button-container6 {
     width: 100px;
     padding: 0px;
     background-color: green;
   }
-  .menu-container {
+  .menu-container6 {
     position: static;
     width: auto;
     background-color: green;
@@ -150,5 +153,105 @@ input:checked + div {
   li a{
     padding: 10px;
   }
+}
+
+
+
+.logo7 {
+  width: 80px;
+  height: 20px;
+  background-color: pink;
+  font-size: 15px;
+  margin-left: 15px;
+  z-index: 2;
+}
+
+.logo-button-container7 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 15px;
+  background-color: orange;
+}
+
+.header7 {
+  position: relative;
+}
+
+.menu-container7 {
+  width: 100%;
+  background-color: orange;
+  padding: 80px 15px 15px 15px;
+  position: absolute;
+  top: 0;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.6s, opacity 0.6s;
+}
+
+.bai7 input:checked + div {
+  display: block;
+  visibility: visible;
+  opacity: 1;
+}
+
+.content7-1, .content7-2 {
+  background-color: rgb(48, 123, 236);
+  height: 150px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.bai7 ul:last-of-type {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .content7-1 {
+    width: calc((100% - 15px) * 0.75);
+  }
+
+  .content7-2 {
+    width: calc((100% - 15px) * 0.25);
+  }
+
+  .logo7 {
+    margin: 0;
+  }
+
+  .header7 {
+    display: flex;
+  }
+
+  .logo-button-container7 {
+    width: 110px;
+    background-color: green;
+  }
+
+  .bai7 li:nth-of-type(4), .bai7 li:nth-of-type(5) {
+    display: none;
+  }
+
+  .menu-container7 {
+    visibility: visible;
+    opacity: 1;
+    background-color: green;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    width: calc(100% - 110px);
+    padding: 15px;
+    position: relative;
+    height: 60px;
+  }
+
+  .bai7 ul:last-of-type {
+    display: flex;
+  }
+
+  
+
 
 }
+
+
