--- a/ss2ep3/style.css
+++ b/ss2ep3/style.css
@@ -51,19 +51,17 @@ img {
   position: relative;
 }
 
-input {
-  display: none;
-}
-
-label {
+button {
   position: relative;
   font-size: 40px;
   cursor: pointer;
   z-index: 2;
-  border: 1px solid black;
-  width: 40px;
-  height: 40px;
+  border: none;
+  width: 30px;
+  height: 30px;
   color: white;
+  background-color: transparent;
+  outline: none;
 }
 
 .logo-button-container6 {
@@ -81,12 +79,12 @@ label {
   font-size: 15px;
 }
 
-.menu-container6 {
+#menu-container6 {
   width: 100%;
   background-color: orange;
-  padding: 80px 15px 15px 15px;
+  padding: 60px 15px 15px 15px;
   position: absolute;
-  top: -300%;
+  top: -215px;
   transition: top 0.5s;
 }
 
@@ -124,8 +122,8 @@ li:hover {
   top: 0;
 }
 
-@media only screen and (min-width: 768px) {
-  label, .bai6 li:first-of-type {
+@media only screen and (min-width: 600px) {
+  button, .bai6 li:first-of-type {
     display: none !important;
   }
   .logo-button-container6 {
@@ -133,7 +131,7 @@ li:hover {
     padding: 0px;
     background-color: green;
   }
-  .menu-container6 {
+  #menu-container6 {
     position: static;
     width: auto;
     background-color: green;
@@ -155,13 +153,18 @@ li:hover {
   }
 }
 
-.logo7 {
+/*--------------------------------------------*/
+
+#logo7 {
   width: 80px;
   height: 20px;
   background-color: pink;
   font-size: 15px;
   margin-left: 15px;
   z-index: 2;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.3s, opacity 0.3s;
 }
 
 .logo-button-container7 {
@@ -176,26 +179,20 @@ li:hover {
   position: relative;
 }
 
-.menu-container7 {
+#menu-container7 {
   width: 100%;
   background-color: orange;
-  padding: 80px 15px 15px 15px;
+  padding: 60px 15px 15px 15px;
   position: absolute;
   top: 0;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0.6s, opacity 0.6s;
-}
-
-.bai7 input:checked + div {
-  display: block;
-  visibility: visible;
-  opacity: 1;
+  transition: visibility 0.3s, opacity 0.3s;
 }
 
 .content7-1, .content7-2 {
   background-color: rgb(48, 123, 236);
-  height: 150px;
+  height: 200px;
   width: 100%;
   margin-bottom: 15px;
 }
@@ -204,7 +201,7 @@ li:hover {
   display: none;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .content7-1 {
     width: calc((100% - 15px) * 0.75);
   }
@@ -213,8 +210,10 @@ li:hover {
     width: calc((100% - 15px) * 0.25);
   }
 
-  .logo7 {
+  #logo7 {
     margin: 0;
+    visibility: visible !important;
+    opacity: 1 !important;
   }
 
   .header7 {
@@ -230,9 +229,9 @@ li:hover {
     display: none;
   }
 
-  .menu-container7 {
-    visibility: visible;
-    opacity: 1;
+  #menu-container7 {
+    visibility: visible !important;
+    opacity: 1 !important;
     background-color: green;
     display: flex;
     justify-content:space-between;
@@ -246,7 +245,4 @@ li:hover {
   .bai7 ul:last-of-type {
     display: flex;
   }
-
 }
-
-
